2007-02-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.9975-10 to upload

	* tests/Class+Meth.R (tstMatrixClass): require coercions to
	specific classes less unconditionally.

	* R/Auxiliaries.R: get rid of as_Tsparse() and as_Rsparse()

	* R/Tsparse.R (triu): etc, use as(*, "TsparseMatrix") instead of as_Tsparse()

	* R/Rsparse.R (.R.2.T): R-level workaround using compressed_to_TMatrix.
	* R/Rsparse.R (.R.2.C): R-level workaround since C-level
	R_to_CMatrix segfaults on one platform.
	Eliminate most coercion method to *specific* classes, and replace
	with virtual classes coercions.


2007-02-01  Martin Maechler <maechler@stat.math.ethz.ch>

	* src/init.c: export the CHM...._validate() placeholders, since
	they *are* called.

	* tests/Class+Meth.R (classCanCoerce): and starting to test
	all as(<from>, <to>)

2007-01-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R ([): more care when subsetting triangular Tsparse
	* tests/indexing.R: tested now
	* tests/indexing.Rout.save: updated

	* src/Csparse.c (Csparse_to_dense): use Rkind = -1 for PATTERN to
	* src/chm_common.c (chm_dense_to_SEXP): return "ngeMatrix" when
	appropriate.

	* NAMESPACE: export a trivial
	* R/Matrix.R: drop() Matrix-method

	* R/AllClass.R: moved all prototypes to virtual super classes.

	* R/Rsparse.R: many more coercions to have less exceptions in
	* tests/Class+Meth.R:

	* R/Ops.R (Compare): tweak for case with NA
	* tests/simpl.R: hence another 'FIXME' eliminated

2007-01-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R (solve): the obvious methods for diagonalMatrix
	objects.

	* tests/Class+Meth.R (tstMatrixClass): now testing diag(), nnzero(),
	  and more of "!", "&", "|", all, any; coercions

	* R/Rsparse.R: many coercions (which enable quite a few other
	methods), thanks to enhancements in
	* src/dgCMatrix.c (R_to_CMatrix): new, and
	* src/dgCMatrix.c (compressed_to_TMatrix): now for (d,l,n) ,